--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,16 @@
     <script src="script.js" async></script>
     <title>Library</title>
 </head>
+
 <body>
-    
+    <div class="body">
+        <div class="header">Library</div>
+        <div class="content">
+            <div class="buttonWrapper"> <button class="addBook">AddBook</button></div>
+            <div class="library"></div>
+        </div>
+        <div class="footer"></div>
+    </div>
 </body>
+
 </html>
