--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
         <div class="header">Library</div>
         <div class="content">
             <div class="buttonWrapper"> <button class="addBook">AddBook</button></div>
+            <dialog open>
+                <form method="dialog">
+                    <label for="title">Title:</label>
+                    <input type="text" id="title" name="title" required>
+                    <label for="author">Author:</label>
+                    <input type="text" id="author" name="author" required>
+                    <label for="pages">Pages:</label>
+                    <input type="number" id="pages" name="pages" required>
+                    <div class="checkboxWrapper">
+                        <label for="read">Have you read it ?</label>
+                        <input type="checkbox" name="read" id="read">
+                    </div>
+                    <button type="submit" id="submit">Submit</button>
+                </form>
+            </dialog>
             <div class="library"></div>
         </div>
         <div class="footer"></div>
