FIX: fix text inside button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="body">
         <div class="header">Library</div>
         <div class="content">
-            <div class="buttonWrapper"> <button class="addBook">AddBook</button></div>
+            <div class="buttonWrapper"> <button class="addBook">+ Add Book</button></div>
             <dialog>
                 <form method="dialog">
                     <label for="title">Title:</label>
