--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header">Library</div>
         <div class="content">
             <div class="buttonWrapper"> <button class="addBook">+ Add Book</button></div>
-            <dialog>
+            <dialog class="dialog">
                 <form method="dialog">
                     <label for="title">Title:</label>
                     <input type="text" id="title" name="title" required>
