--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <input type="number" id="pages" name="pages" required>
                     <div class="checkboxWrapper">
                         <label for="read">Have you read it ?</label>
-                        <input type="checkbox" name="read" id="read">
+                        <input type="checkbox" name="read" id="read" value="read">
                     </div>
                     <button type="submit" id="submit">Submit</button>
                 </form>
